init1: format / cleanup